# DARKGHOST

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  PHASE_02_COMPLETION.md  README.md  benchmark.cpp  darkghost.conf.example  darkghost.conf.node1  darkghost.conf.node2  darkghost.conf.node3  docker-compose.devnet.yml  docker-compose.yml  pool.conf
.github/ISSUE_TEMPLATE/: rfc-001-ring-size-vote.md  rfc_template.md
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  BUILD_AND_TEST.md  BUILD_PROCESS.md  BUILD_REQUIREMENTS.md  BUILD_SUMMARY.md  BULLETPROOFS_AUDIT_PREP.md  CHANGELOG.md  CLI.md  CLI_WALLET.md  CODE_OF_CONDUCT.md  COMMUNITY.md  COMPLETION_NOTICE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  DEVNET_EXPLORER.md  DIRECTORY_STRUCTURE.md  DOCS.md  ECOSYSTEM.md  FAQ.md  FINAL_REORGANIZATION_REPORT.md  FINAL_STRUCTURE.md  GENESIS_PARAMETERS.md  GETTING_STARTED.md  GITHUB_ACTIONS.md  GITHUB_UPLOAD_COMPLETE.md  GOVERNANCE.md  HALVING_SCHEDULE.md  HALVING_SCHEDULE_GRAPH.md  HARDWARE_WALLET.md  I18N.md  LOGO_IMPLEMENTATION_COMPLETE.md  MINING.md  MOBILE.md  PERFORMANCE.md  PHASE_01_COMPLETION.md  PHASE_01_FINAL_SUMMARY.md  PRIVACY_FEATURES.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  (+27 more)
explorer/: README.md  app.js  config.example.js  package.json
explorer/app/public/: style.css
explorer/app/views/: block.ejs  blocks.ejs  index.ejs
explorer/test/: explorer.test.js
scripts/: README.md  build.bat  build_and_test_bp.bat  build_and_test_bp.sh  build_matrix.bat  build_matrix.sh  devnet_down.bat  devnet_down.sh  devnet_up.bat  devnet_up.sh  faucet_bot.py  fork_monero.bat  fork_monero.sh  release.bat  release.sh  run_node.bat  setup_dev.bat  setup_dev.sh  show_new_structure.bat  show_new_structure.sh  show_structure.bat  start_explorer.bat  start_explorer.sh  test_devnet.bat  test_devnet.sh  test_sprint03.bat  test_sprint03.sh  update_build.bat  verify_logo.bat  verify_release.bat  verify_release.sh  verify_sprint_02.bat  verify_sprint_02.sh  verify_structure.bat  verify_upload.bat
src/: darkghost.h  main.cpp
src/consensus/: randomx_v2.cpp  randomx_v2.h
src/core/: blockchain.cpp  blockchain.h  genesis.h
src/privacy/: bulletproofs.cpp  bulletproofs.h  ringct.cpp  ringct.h
src/tests/: blockchain_test.cpp  bulletproofs_test.cpp
src/wallet/: cli_wallet.cpp  stealth_address.cpp  stealth_address.h
whitepaper/: compile.bat  compile.sh  whitepaper_v1.0.tex
